fix: replace .toList() with .collect(Collectors.toList()) in product-service
- Fixed compilation error in ProductCategoryIntegrationTest.java
- Added Collectors import for Java 11 compatibility
- All services now compile successfully with Java 11